在/proto-quic/src下更改BUILD.gn文件

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -15,5 +15,7 @@ group("root") {
     "//net:net_unittests",
     "//net:quic_server",
     "//net:quic_client",
+    "//net:quic_simple_client",
+    "//net:quic_simple_server",
   ]
 }
